# rust-unidecode

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html  search-index.js
benches/: bench.rs
scripts/: Cargo.toml  compress.rs  data.rs  generate_map.pl
src/: build.rs  data.rs  lib.rs  mapping.txt
src/unidecode/src/: lib.rs.html
tests/: unidecode.rs
unidecode/: fn.unidecode.html  fn.unidecode_char.html  index.html  sidebar-items.js  unidecode.v.html  unidecode_char.v.html
