[package]
name = "deunicode"
version = "0.4.0"
authors = ["Kornel Lesinski <kornel@geekhood.net>", "Amit Chowdhury <amitc97@gmail.com>"]
description = "Convert Unicode strings to pure ASCII by intelligently transliterating them. Suppors Emoji and Chinese."
documentation = "https://docs.rs/deunicode"
homepage = "https://github.com/kornelski/deunicode/"
repository = "https://github.com/kornelski/deunicode/"
readme = "README.md"
keywords = [
  "unidecode",
  "emoji",
  "Unicode",
  "ASCII",
  "transliteration"
]
license = "BSD-3-Clause"
